# lipsync_demo

./: .gitattributes  .gitignore  Readme.md  app.py  openvino_realtime_mic.py  pyproject.toml
models/openvino/: musetalkV15_unet.xml
scripts/: setup_musetalk.ps1
