[project]
name = "musetalk-demo"
version = "0.1.0"
description = "Command-line OpenVINO Wav2Lip lip-sync demo."
readme = "Readme.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=0.23",
    "librosa==0.9.2",
    "numba>=0.59",
    "numpy>=1.26,<2",
    "openvino>=2025.2",
    "opencv-python>=4.10",
    "pillow>=10",
    "requests>=2.32",
    "setuptools<81",
    "sounddevice>=0.5",
    "torch>=2.1",
    "tqdm>=4.66",
]

[tool.uv]
package = false
